# OutsideInside

./: README.md  pyproject.toml
outsideinside_bim/: __init__.py  cad_export.py  cli.py  constants.py  domain.py  engine.py  geometry.py  ingestion.py  perception.py  rendering.py  rulebook.py
